--- a/src/app/calcula-media/calcula-media.component.html
+++ b/src/app/calcula-media/calcula-media.component.html
@@ -1,18 +1,18 @@
 <form>
     <div>
-        <label for="b1">Bim 1</label>
+        <label for="b1">Bim 1: </label>
         <input id="b1" name="b1" type="number" #b1>
     </div>
     <div>
-        <label for="b2">Bim 2</label>
+        <label for="b2">Bim 2: </label>
         <input id="b2" name="b2" type="number" #b2>
     </div>
     <div>
-        <label for="b3">Bim 3</label>
+        <label for="b3">Bim 3: </label>
         <input id="b3" name="b3" type="number" #b3>
     </div>
     <div>
-        <label for="b4">Bim 4</label>
+        <label for="b4">Bim 4: </label>
         <input id="b4" name="b4" type="number" #b4>
     </div>
     <div>
@@ -25,5 +25,18 @@
 </form>
 <div *ngIf="mediaParcial">
     <p>Média = {{mediaParcial}}</p>
-    <p></p>
+    <p>Situação = {{situacao}}</p>
+</div>
+<div *ngIf="mediaParcial < 60 && mediaParcial >= 10">
+    <form>
+        <div>
+            <label for="avFinal">Nota da Av. Final: </label>
+            <input id="avFinal" name="avFinal" type="number" #avFinal>
+        </div>
+        <input type="button" value="Calcular" (click)="calcularAvFinal(+avFinal.value)">
+    </form>
+</div>
+<div *ngIf="avFinal">
+    <p>Nota final = {{avFinal}}</p>
+    <p>Situação = </p>
 </div>
