--- a/src/app/calcula-media/calcula-media.component.html
+++ b/src/app/calcula-media/calcula-media.component.html
@@ -1,26 +1,23 @@
 <form>
     <div>
-        <label for="b1">Bim 1: </label>
+        <label for="b1">Bimestre 1: </label>
         <input id="b1" name="b1" type="number" #b1>
     </div>
     <div>
-        <label for="b2">Bim 2: </label>
+        <label for="b2">Bimestre 2: </label>
         <input id="b2" name="b2" type="number" #b2>
     </div>
     <div>
-        <label for="b3">Bim 3: </label>
+        <label for="b3">Bimestre 3: </label>
         <input id="b3" name="b3" type="number" #b3>
     </div>
     <div>
-        <label for="b4">Bim 4: </label>
+        <label for="b4">Bimestre 4: </label>
         <input id="b4" name="b4" type="number" #b4>
     </div>
     <div>
         <input type="button" value="Calcular" 
-         (click)="calcularMediaParcial(+b1.value, 
-                                       +b2.value,
-                                       +b3.value,
-                                       +b4.value)">
+         (click)="calcularMediaParcial(+b1.value, +b2.value, +b3.value, +b4.value)">
     </div>
 </form>
 <div *ngIf="mediaParcial">
@@ -38,5 +35,5 @@
 </div>
 <div *ngIf="avFinal">
     <p>Nota final = {{avFinal}}</p>
-    <p>Situação = </p>
+    <p>Situação = {{situacaoFinal}}</p>
 </div>
